--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,5 @@ install:
 
 test_script:
   - chmod +x gradlew
-  - ./gradlew test -dselenide.hedless=true --info
+  - ./gradlew test -Dselenide.hedless=true --info
 
-  - ./gradlew test --info
