--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 group 'ru.netology'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = 11
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
@@ -15,7 +16,7 @@ repositories {
 dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    implementation group: 'com.codeborne', name: 'selenide', version: '6.1.1'
+    testImplementation group: 'com.codeborne', name: 'selenide', version: '6.1.1'
 
     testImplementation 'org.slf4j:slf4j-simple:1.7.32'
 }
